<resources>
    <string name="app_name">Project JLPT</string>
    <string name="main_activity_title_welcome_back">おかえり。</string>
    <string name="main_activity_title_welcome_back_polite">お帰りなさい。</string>
    <string name="main_activity_title_morning">おはよう！</string>
    <string name="main_activity_title_morning_polite">おはようございます！</string>
    <string name="main_activity_title_afternoon">こんにちは。</string>
    <string name="main_activity_title_evening">こんばんは。</string>
    <string name="grammar_list_activity_btn_text">Grammar・文法</string>
    <string name="conjugation_activity_btn_text">Word Conjugation・活用</string>
    <string name="conjugator_activity_btn_text">Verb Conjugator</string>
    <string name="grammar_list_activity_title">All the grammar</string>
    <string name="grammar_list_activity_progressText">Loading Now・ロード中</string>
    <string name="grammar_list_pattern_default">Grammar Pattern Here</string>
    <string name="grammar_list_romaji_default">Its Associated Romaji</string>
    <string name="grammar_list_meaning_default">Its meaning here :)</string>
    <string name="grammar_list_level_default">N?</string>
    <string name="verb_input_hint_text">Kanji, kana, romaji</string>
    <string name="conjugation_not_found">Sorry, I can\'t find the conjugation for %1$s</string>
    <string name="conjugation_error">Sorry, something went wrong&#8230;</string>
    <string name="conjugator_activity_table_title_plain_a">Plain\nAffirmative</string>
    <string name="conjugator_activity_table_title_polite_a">Polite\nAffirmative</string>
    <string name="conjugator_activity_table_title_plain_n">Plain\nNegative</string>
    <string name="conjugator_activity_table_title_polite_n">Polite\nNegative</string>
    <string name="conjugator_activity_verb_title_masu">Polite (masu) form ます形</string>
    <string name="conjugator_activity_verb_title_dict">Dictionary form 辞書形</string>
    <string name="conjugator_activity_verb_title_neg">Negative form 否定形</string>
    <string name="conjugator_activity_verb_title_pot">Potential form 可能形</string>
    <string name="conjugator_activity_verb_title_con">Conditional form 条件形</string>
    <string name="conjugator_activity_verb_title_vol">Volitional form 意向形</string>
    <string name="conjugator_activity_verb_title_proh">Prohibitive form 禁止形</string>
    <string name="conjugator_activity_verb_title_imp">Imperative form 命令形</string>
    <string name="conjugator_activity_verb_title_cau">Causative form 使役形</string>
    <string name="conjugator_activity_verb_title_pas">Passive form 受身形</string>
    <string name="conjugator_activity_verb_title_caupas">Causative-Passive form 使役受身形</string>
    <string name="conjugator_activity_verb_title_te">Te form て形</string>
    <string name="conjugator_activity_verb_title_ta">Ta form た形</string>
    <string name="conjugator_activity_verb_tense_present">Present</string>
    <string name="conjugator_activity_verb_tense_past">Past</string>
    <string name="conjugator_activity_verb_default">動詞</string>
    <string name="conjugator_activity_conjugation_default">します</string>
    <string name="conjugator_activity_romaji_default">verb</string>
    <string name="conjugator_activity_conjugationRomaji_default">shimasu</string>
    <string name="conjugator_activity_group_default">ichidan verb</string>
    <string name="conjugator_activity_progressText_search">Searching now</string>
    <string name="conjugator_activity_progressText_conjugate">Conjugating now</string>
    <string name="conjugator_activity_myVerb">%1$s%2$s</string>
    <string name="conjugator_activity_myRomaji">%1$s%2$s</string>
    <string name="conjugator_activity_myMeaning">to %1$s</string>
    <string name="conjugator_activity_myGroup_group1">Group 1 (ichidan) verb that ends with %1$s</string>
    <string name="conjugator_activity_myGroup_group2">Group 2 (godan) verb that ends with %1$s</string>
    <string name="conjugator_activity_myGroup_group3">Group 3 verb (%1$s)</string>
    <string name="individual_grammar_pattern_default">文法パターン</string>
    <string name="individual_grammar_romaji_default">bunpou pataan</string>
    <string name="individual_grammar_kana_default">ぶんぽうぱたーん</string>
    <string name="individual_grammar_meaning_default">This is just a template</string>
    <string name="individual_grammar_level_default">N5</string>
    <string name="individual_grammar_explanation_default">This is an explanation</string>
    <string name="individual_grammar_usage_default">Usage here</string>
    <string name="individual_grammar_example_default">にほんご\nnihongo\nJapanese</string>
    <string name="individual_grammar_synonym_default">Synonymous\nAnother</string>
    <string name="individual_grammar_antonym_default">Antonymous\nAnother</string>
    <string name="individual_grammar_confusing_default">Ahh&#8230;\nSo confusing</string>
    <string name="individual_grammar_explanation">🎎 Explanation・説明</string>
    <string name="individual_grammar_usage">🤔 Usage・使い方</string>
    <string name="individual_grammar_example">🤪 Example・例文</string>
    <string name="individual_grammar_synonym">😀 Synonymous Pattern</string>
    <string name="individual_grammar_antonym">👺 Antonymous Pattern</string>
    <string name="individual_grammar_confusing">😱 Don\'t confuse this pattern with:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conjugation_activity_verb_title">Verb Conjugation</string>
    <string name="conjugation_activity_verb_group1_title">Group 1\n五段活用</string>
    <string name="conjugation_activity_verb_group2_title">Group 2\n上一段活用\n下一段活用</string>
    <string name="conjugation_activity_verb_group3_title">Group 3\nサ行変格活用\nカ行変格活用</string>
    <string name="conjugation_activity_verb_title_dict">Dictionary\n辞書形</string>
    <string name="conjugation_activity_verb_group1_dict">~u</string>
    <string name="conjugation_activity_verb_group1_dict_ex">飲む</string>
    <string name="conjugation_activity_verb_group2_dict">~u</string>
    <string name="conjugation_activity_verb_group2_dict_ex">食べる</string>
    <string name="conjugation_activity_verb_group3_dict">する\nくる</string>
    <string name="conjugation_activity_verb_title_masu">Polite\nます形</string>
    <string name="conjugation_activity_verb_group1_masu">~i +ます</string>
    <string name="conjugation_activity_verb_group1_masu_ex">飲みます</string>
    <string name="conjugation_activity_verb_group2_masu">-る +ます</string>
    <string name="conjugation_activity_verb_group2_masu_ex">食べます</string>
    <string name="conjugation_activity_verb_group3_masu">します\nきます</string>
    <string name="conjugation_activity_verb_title_neg">Negative\n否定形</string>
    <string name="conjugation_activity_verb_group1_neg">~a +ない</string>
    <string name="conjugation_activity_verb_group1_neg_ex">飲まない</string>
    <string name="conjugation_activity_verb_group2_neg">-る +ない</string>
    <string name="conjugation_activity_verb_group2_neg_ex">食べない</string>
    <string name="conjugation_activity_verb_group3_neg">しない\nこない</string>
    <string name="conjugation_activity_verb_title_pot">Potential\n可能形</string>
    <string name="conjugation_activity_verb_group1_pot">~e +る</string>
    <string name="conjugation_activity_verb_group1_pot_ex">飲める</string>
    <string name="conjugation_activity_verb_group2_pot">-る +られる</string>
    <string name="conjugation_activity_verb_group2_pot_ex">食べられる</string>
    <string name="conjugation_activity_verb_group3_pot">できる\nこられる</string>
    <string name="conjugation_activity_verb_title_con">Conditional\n条件形</string>
    <string name="conjugation_activity_verb_group1_con">~e +ば</string>
    <string name="conjugation_activity_verb_group1_con_ex">飲めば</string>
    <string name="conjugation_activity_verb_group2_con">-る +れば</string>
    <string name="conjugation_activity_verb_group2_con_ex">食べれば</string>
    <string name="conjugation_activity_verb_group3_con">すれば\nくれば</string>
    <string name="conjugation_activity_verb_title_vol">Volitional\n意向形</string>
    <string name="conjugation_activity_verb_group1_vol">~o +う</string>
    <string name="conjugation_activity_verb_group1_vol_ex">飲もう</string>
    <string name="conjugation_activity_verb_group2_vol">-る +よう</string>
    <string name="conjugation_activity_verb_group2_vol_ex">食べよう</string>
    <string name="conjugation_activity_verb_group3_vol">しよう\nこよう</string>
    <string name="conjugation_activity_verb_title_proh">Prohibitive\n禁止形</string>
    <string name="conjugation_activity_verb_group1_proh">~u +な</string>
    <string name="conjugation_activity_verb_group1_proh_ex">飲めるな</string>
    <string name="conjugation_activity_verb_group2_proh">+な</string>
    <string name="conjugation_activity_verb_group2_proh_ex">食べるな</string>
    <string name="conjugation_activity_verb_group3_proh">するな\nくるな</string>
    <string name="conjugation_activity_verb_title_imp">Imperative\n命令形</string>
    <string name="conjugation_activity_verb_group1_imp">~e</string>
    <string name="conjugation_activity_verb_group1_imp_ex">飲め</string>
    <string name="conjugation_activity_verb_group2_imp">-る +ろ</string>
    <string name="conjugation_activity_verb_group2_imp_ex">食べろ</string>
    <string name="conjugation_activity_verb_group3_imp">しろ\nこい</string>
    <string name="conjugation_activity_verb_title_cau">Causative\n使役形</string>
    <string name="conjugation_activity_verb_group1_cau">~a +せる</string>
    <string name="conjugation_activity_verb_group1_cau_ex">飲ませる</string>
    <string name="conjugation_activity_verb_group2_cau">-る +させる</string>
    <string name="conjugation_activity_verb_group2_cau_ex">食べさせる</string>
    <string name="conjugation_activity_verb_group3_cau">させる\nこさせる</string>
    <string name="conjugation_activity_verb_title_pas">Passive\n受身形</string>
    <string name="conjugation_activity_verb_group1_pas">~a +れる</string>
    <string name="conjugation_activity_verb_group1_pas_ex">飲まれる</string>
    <string name="conjugation_activity_verb_group2_pas">-る +られる</string>
    <string name="conjugation_activity_verb_group2_pas_ex">食べられる</string>
    <string name="conjugation_activity_verb_group3_pas">される\nこられる</string>
    <string name="conjugation_activity_verb_title_caupas">Causative-\nPassive\n使役受身形</string>
    <string name="conjugation_activity_verb_group1_caupas">~a +せられる\n(される)</string>
    <string name="conjugation_activity_verb_group1_caupas_ex">飲ませられる\n(飲まされる)</string>
    <string name="conjugation_activity_verb_group2_caupas">-る +させられる</string>
    <string name="conjugation_activity_verb_group2_caupas_ex">食べさせられる</string>
    <string name="conjugation_activity_verb_group3_caupas">させられる\nこさせられる</string>
    <string name="conjugation_activity_onbin_title">Te and Ta form</string>
    <string name="conjugation_activity_onbin_te_title">Te form\nて形</string>
    <string name="conjugation_activity_onbin_ta_title">Ta form\nた形</string>
    <string name="conjugation_activity_onbin_title_tte">(Group 1)\nう・つ・る</string>
    <string name="conjugation_activity_onbin_te_tte">って</string>
    <string name="conjugation_activity_onbin_ta_tte">った</string>
    <string name="conjugation_activity_onbin_te_tte_ex">買って\n立って\n撮って</string>
    <string name="conjugation_activity_onbin_ta_tte_ex">買った\n立った\n撮った</string>
    <string name="conjugation_activity_onbin_title_shite">(Group 1)\nす</string>
    <string name="conjugation_activity_onbin_te_shite">して</string>
    <string name="conjugation_activity_onbin_ta_shite">した</string>
    <string name="conjugation_activity_onbin_te_shite_ex">探して</string>
    <string name="conjugation_activity_onbin_ta_shite_ex">探した</string>
    <string name="conjugation_activity_onbin_title_ite">(Group 1)\nく</string>
    <string name="conjugation_activity_onbin_te_ite">いて</string>
    <string name="conjugation_activity_onbin_ta_ite">いた</string>
    <string name="conjugation_activity_onbin_te_ite_ex">書いて</string>
    <string name="conjugation_activity_adj_title">Adjective Conjugation</string>
</resources>