<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConjugationActivity">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/conjugation_activity_verb_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/verb_title" android:textAlignment="center"
                    android:textColor="@color/titleText" android:textSize="24sp"
                    android:fontFamily="@font/noto_sans_cjk_black"/>
            <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondary"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"/>
            <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/verb_table">

                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:id="@+id/verb_table_title" android:gravity="center">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" android:id="@+id/tit0"
                                android:padding="8dp"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_title"
                                android:id="@+id/tit1"
                                style="@style/conjugation_table_title_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_title"
                                android:id="@+id/tit2"
                                style="@style/conjugation_table_title_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_title"
                                android:id="@+id/tit3"
                                style="@style/conjugation_table_title_style"/>
                    </TableRow>
                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:id="@+id/verb_table_dictionary"
                            android:gravity="center">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_dict"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/dict0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_dict"
                                android:id="@+id/dict1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_dict"
                                android:id="@+id/dict2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_dict"
                                android:id="@+id/dict3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_polite">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_masu"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/masu0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_masu"
                                android:id="@+id/masu1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_masu"
                                android:id="@+id/masu2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_masu"
                                android:id="@+id/masu3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_negative">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_neg"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/neg0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_neg"
                                android:id="@+id/neg1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_neg"
                                android:id="@+id/neg2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_neg"
                                android:id="@+id/neg3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_potential">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_pot"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/pot0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_pot"
                                android:id="@+id/pot1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_pot"
                                android:id="@+id/pot2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_pot"
                                android:id="@+id/pot3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_conditional">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_con"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/con0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_con"
                                android:id="@+id/con1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_con"
                                android:id="@+id/con2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_con"
                                android:id="@+id/con3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_volitional">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_vol"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/vol0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_vol"
                                android:id="@+id/vol1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_vol"
                                android:id="@+id/vol2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_vol"
                                android:id="@+id/vol3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_prohibitive">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_proh"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/proh0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_proh"
                                android:id="@+id/proh1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_proh"
                                android:id="@+id/proh2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_proh"
                                android:id="@+id/proh3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_imperative">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_imp"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/imp0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_imp"
                                android:id="@+id/imp1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_imp"
                                android:id="@+id/imp2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_imp"
                                android:id="@+id/imp3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_causative">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_cau"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/cau0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_cau"
                                android:id="@+id/cau1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_cau"
                                android:id="@+id/cau2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_cau"
                                android:id="@+id/cau3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_passive">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_pas"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/pas0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_pas"
                                android:id="@+id/pas1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_pas"
                                android:id="@+id/pas2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_pas"
                                android:id="@+id/pas3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                    <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                              android:gravity="center" android:id="@+id/verb_table_causative_passive">
                        <TextView
                                android:text="@string/conjugation_activity_verb_title_caupas"
                                style="@style/conjugation_table_title_style"
                                android:id="@+id/caupas0"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group1_caupas"
                                android:id="@+id/caupas1"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group2_caupas"
                                android:id="@+id/caupas2"
                                style="@style/conjugation_table_content_style"/>
                        <TextView
                                android:text="@string/conjugation_activity_verb_group3_caupas"
                                android:id="@+id/caupas3"
                                style="@style/conjugation_table_content_style"/>
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
            <TextView
                    android:text="@string/conjugation_activity_adj_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/adj_title" android:textAlignment="center"
                    android:textColor="@color/titleText" android:textSize="24sp"
                    android:fontFamily="@font/noto_sans_cjk_black"/>
            <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondary"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            />
            <TextView
                android:text="@string/conjugation_activity_noun_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/noun_title" android:textAlignment="center"
                android:textColor="@color/titleText" android:textSize="24sp"
                android:fontFamily="@font/noto_sans_cjk_black"/>
            <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondary"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            />
        </LinearLayout>
</ScrollView>